<resources>
    <string name="app_name">ADP</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to the American Dream Planner</string>
    <string name="description_program">The American Dream Planner is financial, estate, legacy planning software to help you achieve your personal American Dream.</string>
    <string name="description_about">The American Dream Planner was created to help you build your personal American Dream and to benefit from knowing how your planning choices can affect the outcome.</string>
    <string name="description_advisors">There are advisors who can assist you in building your personal American Dream Planner.  Find them at our web site and then type their information here.</string>
    <string name="description_scroll">Scroll to see more information and saved items</string>
    <string name="description_share">Export your information is currently under construction</string>
    <string name="description_results">Under construction</string>
    <string name="description_results_pie_charts">Pie charts here</string>
    <string name="description_results_line_charts">Line charts here</string>
    <string name="description_results_bar_charts">Bar charts here</string>
    <string name="description_results_scroll">Scroll to see results in bar/line/bar/tabular views</string>
    <string name="description_results_tabular_charts">Tabular charts here</string>
    <string name="contact_info_advisor_name">Name</string>
    <string name="contact_info_advisor_street">Street</string>
    <string name="contact_info_advisor_city">City</string>
    <string name="contact_info_advisor_state">State</string>
    <string name="contact_info_advisor_zip">zip</string>
    <string name="contact_info_advisor_phone">phone</string>
    <string name="contact_info_advisor_email">email</string>
    <string name="contact_info_client_name">Client Name</string>
    <string name="contact_info_client_preferred_first_name">Client first name</string>
    <string name="contact_info_client_street">Street</string>
    <string name="contact_info_client_city">City</string>
    <string name="contact_info_client_state">State</string>
    <string name="contact_info_client_zip">zip</string>
    <string name="contact_info_client_phone">phone</string>
    <string name="contact_info_client_email">email</string>
    <string name="contact_info_client_year_of_birth">Client birth year</string>
    <string name="contact_info_spouse_name">Spouse Name</string>
    <string name="contact_info_spouse_preferred_first_name">Spouse first name</string>
    <string name="contact_info_spouse_year_of_birth">Spouse birth year</string>
    <string name="contact_info_beneficiary_name">Beneficiary name</string>
    <string name="grid_name">Name</string>
    <string name="grid_amount">Amount</string>
    <string name="grid_value">Value</string>
    <string name="grid_growth_rate">Growth</string>
    <string name="grid_recur_cycle">Recurs</string>
    <string name="grid_year_begin">Begin</string>
    <string name="grid_year_end">End</string>
    <string name="item_add_to">Add to</string>
    <string name="item_amount">Amount</string>
    <string name="item_deduct_from">Deduct from</string>
    <string name="item_growth_rate">Growth rate</string>
    <string name="item_income_tax_rate">Tax rate</string>
    <string name="item_name">Name</string>
    <string name="item_ownership">Ownership</string>
    <string name="item_recur_cycle">Recurs</string>
    <string name="item_sell_yes_no">Sell Yes No</string>
    <string name="item_value">Value</string>
    <string name="item_year_begin">Year begin</string>
    <string name="item_year_end">Year end</string>
    <string name="item_year_sell">Year to sell</string>
    <string name="item_real_property_tax-rate">Tax rate</string>
    <string name="item_real_property_buisness_use_">Business use</string>
    <string name="item_real_property_buisness_residential">Business residential</string>
    <string name="item_real_property_buisness_ratio_of_land_">Business ratio of land</string>
    <string name="item_real_property_buisness_property_manager">Property manager</string>
    <string name="item_real_property_buisness_transfer_to_entity">Trasnsfer to entity</string>
    <string name="item_real_property_debt_down_payment">Down payment</string>
    <string name="item_real_property_debt_amount">Debt amount</string>
    <string name="item_real_property_debt_interest-rate">Debt interest rate</string>
    <string name="item_real_property_debt_term">Debt term</string>
    <string name="item_real_property_sale_expenses">Sale expenses</string>
    <string name="item_real_property_sale_down_payment">Sale down payment</string>
    <string name="item_real_property_sale_interest_rate">Sale interest rate</string>
    <string name="item_real_property_sale_term">Sale term</string>
    <string name="item_retirement_account_type">Account type</string>
    <string name="item_retirement_withdrawal_rate">Rate of withdrawal</string>
    <string name="item_retirement_year_begin_to_withdraw">Begin withdrawal</string>
    <string name="item_retirement_fixed_withdrawal_amount">Fixed withdrawal</string>
    <string name="item_retirement_percent_withdrawal_rate">Percent withdrawal</string>
    <string name="item_insurance_death_benefit">Death benefit</string>
    <string name="item_insurance_premium">Premium</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_create_new">Create New</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit Existing</string>
    <string name="menu_save_session">Session Save</string>
    <string name="menu_save_to_database">Save</string>
    <string name="menu_save_as_scenario">Scenario Save</string>
    <string name="menu_open_client">Open client</string>
    <string name="menu_scenario_view">Scenario view</string>
    <string name="menu_scenario_compare">Scenario compare</string>
    <string name="nav_input_about">About</string>
    <string name="nav_input_advisors">Advisors</string>
    <string name="nav_input_business">Business</string>
    <string name="nav_input_income">Income</string>
    <string name="nav_input_expenses">Expenses</string>
    <string name="nav_input_getting_started">Getting started</string>
    <string name="nav_input_help">Help</string>
    <string name="nav_input_home">Home</string>
    <string name="nav_input_investments">Investments</string>
    <string name="nav_input_life_insurance">Insurance</string>
    <string name="nav_input_plan_choices">Plan Choices</string>
    <string name="nav_input_personal">Personal</string>
    <string name="nav_input_real_property">Real Property</string>
    <string name="nav_input_results">Results</string>
    <string name="nav_input_retirement">Retirement</string>
    <string name="nav_input_share">Share</string>
    <string name="nav_output_business">Business</string>
    <string name="nav_output_expenses">Expenses</string>
    <string name="nav_output_flow_chart">Flow chart</string>
    <string name="nav_output_gift_accounts">Gift accounts</string>
    <string name="nav_output_gift_beneficiaries">Gift beneficiaries</string>
    <string name="nav_output_income">Income</string>
    <string name="nav_output_liquid_accounts">Liquid accounts</string>
    <string name="nav_output_liquid _accounts_by_type">Liquid accounts by type</string>
    <string name="nav_output_monte-carlo">Monte Carlo</string>
    <string name="nav_output_net_worth">Net worth</string>
    <string name="nav_output_real_property">Real Property</string>
    <string name="nav_output_stock_options">Stock options</string>
    <string name="nav_output_tax_and_inheritance">Tax and inheritance</string>
    <string name="nav_output_trusts">Trusts</string>
    <string name="nav_output_trusts_annuity">Trusts annuity</string>
    <string name="nav_output_trusts_charitable">Trusts charitable</string>
    <string name="nav_output_wealth_summary">Wealth summary</string>
    <string name="planning_choice_double_exemption">Double exemption (couples only)</string>
    <string name="planning_choice_gift_business">Gifts business</string>
    <string name="planning_choice_gift_charity">Include gifts to charity</string>
    <string name="planning_choice_trust_insurance">Establish insurance trust</string>
    <string name="planning_choice_plan_noplan">Implement all planning choices</string>
    <string name="planning_choice_years_to_project">Years to project</string>
    <string name="planning_choice_discounts">Discounts</string>
    <string name="planning_choice_trust_charitable_remainder">Trust Charitable Remainder</string>
    <string name="planning_choice_trust_charitable_lead">Trust Charitable Lead</string>
    <string name="planning_choice_trust_annuity">Trust annuity</string>
    <string name="planning_choice_self_cancel_installment_note">Self cancel note</string>
    <string name="suggested_add_to">Joint Account</string>
    <string name="suggested_amount">50000</string>
    <string name="suggested_advisor_name">Advisor name</string>
    <string name="suggested_advisor_street">Advisor Street</string>
    <string name="suggested_advisor_city">Advisor City</string>
    <string name="suggested_advisor_state">Advisor State</string>
    <string name="suggested_advisor_zip">Advisor zip</string>
    <string name="suggested_advisor_phone">Advisor phone</string>
    <string name="suggested_advisor_email">Advisor email</string>
    <string name="suggested_client_name">Your name</string>
    <string name="suggested_client_preferred_first_name">Preferred first name</string>
    <string name="suggested_client_street">Your Street</string>
    <string name="suggested_client_city">Your City</string>
    <string name="suggested_client_state">Your State</string>
    <string name="suggested_client_zip">Your zip</string>
    <string name="suggested_client_phone">Your phone</string>
    <string name="suggested_client_email">Your email</string>
    <string name="suggested_client_year_of_birth">Your birth year</string>
    <string name="suggested_spouse_name">Your spouse Name</string>
    <string name="suggested_spouse_preferred_first_name">Preferred first name</string>
    <string name="suggested_spouse_year_of_birth">Your spouse birth year</string>
    <string name="suggested_deduct_from">Joint Account</string>
    <string name="suggested_growth_rate">3.00</string>
    <string name="suggested_income_tax_rate">35</string>
    <string name="suggested_insurance_death_benefit">0</string>
    <string name="suggested_insurance_premium">0</string>
    <string name="suggested_name">Give the item a name</string>
    <string name="suggested_ownership">Joint</string>
    <string name="suggested_planning_choice_double_exemption">No</string>
    <string name="suggested_planning_choice_gift_to_charity">No</string>
    <string name="suggested_planning_choice_plan">No Plan</string>
    <string name="suggested_recur_cycle">1</string>
    <string name="suggested_retirement_withdrawal_rate">5</string>
    <string name="suggested_retirement_year_begin_to_withdraw">2030</string>
    <string name="suggested_sell_yes_no">No</string>
    <string name="suggested_value">Purchase Price</string>
    <string name="suggested_year_begin">2014</string>
    <string name="suggested_year_end">2018</string>
    <string name="suggested_year_sell">2040</string>
    <string name="suggested_years_to_project">30</string>
    <string name="subnav_advisor_accoutant">Accountant</string>
    <string name="subnav_advisor_attorney">Attorney</string>
    <string name="subnav_advisor_banker">Banker</string>
    <string name="subnav_advisor_charitable">Charity</string>
    <string name="subnav_advisor_insurance">Insurance</string>
    <string name="subnav_advisor_planner">Planner</string>
    <string name="title_life_insurance">Life Insurance</string>
    <string name="title_real_property">Real Property</string>
</resources>