<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center" >
    
    <ScrollView
        android:id="@+id/input_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal" >

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/menu_create_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/menu_create_new"
                android:textAlignment="center"
                android:textSize="12sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/menu_cancel_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/menu_cancel"
                android:textAlignment="center"
                android:textSize="12sp" />
            
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/menu_delete_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/menu_delete"
                android:textAlignment="center"
                android:textSize="12sp" />
            
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/menu_edit_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/menu_edit"
                android:textAlignment="center"
                android:textSize="12sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/menu_save_to_database_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/menu_save_to_database"
                android:textAlign="center"
                android:textAlignment="center"
                android:textSize="12sp" />
        
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/nav_input_home_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/nav_input_home"
                android:textAlignment="center"
                android:textSize="12sp" />
     
        </GridLayout>
    </ScrollView>
    
<TextView
    android:id="@+id/title_real_property"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/input_menu"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
	android:textSize="20sp"
    android:text="@string/title_real_property"
    android:textStyle="bold" /> 
</TextView>

    <ScrollView
        android:id="@+id/new_input_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_real_property"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp" >

        <GridLayout
            android:id="@+id/new_input_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="0"
                android:textSize="12sp"
                android:text="@string/item_name" />

            <EditText
                android:id="@+id/name_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="0"
                android:textSize="12sp"
                android:hint="@string/suggested_name"
                android:gravity="right"/>
            
            <TextView
                android:id="@+id/ownership_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="1"
                android:textSize="12sp"
                android:text="@string/item_ownership" />

            <EditText
                android:id="@+id/ownership_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="1"
                android:textSize="12sp"
                android:hint="@string/suggested_ownership"
                android:gravity="right"/>

            <TextView
                android:id="@+id/value_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="2"
                android:textSize="12sp"
                android:text="@string/item_value" />

            <EditText
                android:id="@+id/value_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="2"
                android:textSize="12sp"
                android:hint="@string/suggested_value"
                android:gravity="right" />
            
             <TextView
                android:id="@+id/growth_rate_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="3"
                android:textSize="12sp"
                android:text="@string/item_growth_rate" />

            <EditText
                android:id="@+id/growth_rate_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:textSize="12sp"
                android:layout_row="3"
                android:hint="@string/suggested_growth_rate" 
                android:gravity="right" />

            <TextView
                android:id="@+id/begin_year_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="4"
                android:textSize="12sp"
                android:text="@string/item_year_begin" />

            <EditText
                android:id="@+id/begin_year_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="4"
                android:textSize="12sp"
                android:hint="@string/suggested_year_begin" 
                android:gravity="right" />
            
            <TextView
                android:id="@+id/sell_yes_no_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="5"
                android:textSize="12sp"
                android:text="@string/item_sell_yes_no" />

            <EditText
                android:id="@+id/sell_yes_no_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:textSize="12sp"
                android:layout_row="5"
                android:hint="@string/suggested_sell_yes_no"
                android:gravity="right"  />
            
            <TextView
                android:id="@+id/year_sell_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="6"
                android:textSize="12sp"
                android:text="@string/item_year_sell" />

            <EditText
                android:id="@+id/year_to_sell_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:textSize="12sp"
                android:layout_row="6"
                android:hint="@string/suggested_year_sell"
                android:gravity="right"  />
            
            <TextView
                android:id="@+id/add_to_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="7"
                android:textSize="12sp"
                android:text="@string/item_add_to" />

            <EditText
                android:id="@+id/add_to_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="7"
                android:textSize="12sp"
                android:hint="@string/suggested_add_to"
                android:gravity="right" />
            
            <TextView
                android:id="@+id/income_tax_rate_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="8"
                android:textSize="12sp"
                android:text="@string/item_income_tax_rate" />

            <EditText
                android:id="@+id/income_tax_rate_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:textSize="12sp"
                android:layout_row="8"
                android:hint="@string/suggested_income_tax_rate"
                android:gravity="right"  />
           
        </GridLayout>
    </ScrollView>


</RelativeLayout>