<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center" >
    
    <ScrollView
        android:id="@+id/input_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal" >

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/menu_create_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/menu_create_new"
                android:gravity="center"
                android:textSize="12sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/menu_cancel_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/menu_cancel"
                android:gravity="center"
                android:textSize="12sp" />
            
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/menu_delete_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/menu_delete"
                android:gravity="center"
                android:textSize="12sp" />
            
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/menu_edit_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/menu_edit"
                android:gravity="center"
                android:textSize="12sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/menu_save_to_database_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/menu_save_to_database"
                android:textAlign="center"
                android:gravity="center"
                android:textSize="12sp" />
        
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/nav_input_home_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/nav_input_home"
                android:gravity="center"
                android:textSize="12sp" />
     
        </GridLayout>
    </ScrollView>
    
<TextView
    android:id="@+id/title_life_insurance"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/input_menu"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
	android:textSize="20sp"
    android:text="@string/title_life_insurance"
    android:textStyle="bold" />


<TextView
    android:id="@+id/description_scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/title_life_insurance"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
	android:textSize="12sp"
    android:text="@string/description_scroll"/>

    <ScrollView
        android:id="@+id/new_input_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_scroll"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp" >

        <GridLayout
            android:id="@+id/new_input_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/item_name_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="0"
                android:textSize="12sp"
                android:text="@string/item_name" 
                android:gravity="left"/>

            <EditText
                android:id="@+id/item_name_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="0"
                android:textSize="12sp"
                android:hint="@string/suggested_name"
                android:gravity="right"/>
            
            <TextView
                android:id="@+id/ownership_tv"
                android:layout_wiitem_dth="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="1"
                android:textSize="12sp"
                android:text="@string/item_ownership"
				android:gravity="left"/>

            <EditText
                android:id="@+id/item_ownership_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="1"
                android:textSize="12sp"
                android:hint="@string/suggested_ownership"
                android:gravity="right"/>

            <TextView
                android:id="@+id/item_insurance_death_benefit_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="2"
                android:textSize="12sp"
                android:text="@string/item_insurance_death_benefit"
                android:gravity="left" />

            <EditText
                android:id="@+id/item_insurance_death_benefit_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="2"
                android:textSize="12sp"
                android:hint="@string/suggested_insurance_death_benefit"
                android:gravity="right" />
            
             <TextView
                android:id="@+id/item_insurance_premium_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="3"
                android:textSize="12sp"
                android:text="@string/item_insurance_premium"
                android:gravity="left" />

            <EditText
                android:id="@+id/item_insurance_premium_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:textSize="12sp"
                android:layout_row="3"
                android:hint="@string/suggested_insurance_premium" 
                android:gravity="right" />

            <TextView
                android:id="@+id/item_year_begin_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="4"
                android:textSize="12sp"
                android:text="@string/item_year_begin" 
                android:gravity="left"/>

            <EditText
                android:id="@+id/item_year_begin_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="4"
                android:textSize="12sp"
                android:hint="@string/suggested_year_begin" 
                android:gravity="right" />
            
             <TextView
                android:id="@+id/item_year_end_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="5"
                android:textSize="12sp"
                android:text="@string/item_year_end"
                android:gravity="left" />

            <EditText
                android:id="@+id/item_year_end_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="5"
                android:textSize="12sp"
                android:hint="@string/suggested_year_end" 
                android:gravity="right" />
             
            <TextView
                android:id="@+id/item_add_to_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="6"
                android:textSize="12sp"
                android:text="@string/item_add_to"
                android:gravity="left" />

            <EditText
                android:id="@+id/item_add_to_et"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_row="6"
                android:textSize="12sp"
                android:hint="@string/suggested_add_to"
                android:gravity="right" />
       
        </GridLayout>
    </ScrollView>
</RelativeLayout>